set conditional bean

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.sql.init.schema-locations=classpath:/org/springframework/batch/core/schem
 spring.batch.jdbc.initialize-schema=EMBEDDED
 #Execute all Spring Batch jobs in the context on startup or not.
 spring.batch.job.enabled=false
+
+quartz.job.auto-run=true
+quartz.job.simple.auto-run=false
